# predictive-maintenance-tensorflow

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: git-commits.mdc
data/: .gitkeep
data/cmapss/: .gitkeep
docs/: CURSOR_COMMIT_SETUP.md
models/: .gitkeep  fault_classifier.keras  fault_classifier.npz
notebooks/: .gitkeep  exploration.ipynb  model_comparison.ipynb
scripts/: dashboard.py  demo.py  demo_raw.py  demo_rul.py  download_cmapss.py  download_cwru.py  run_all.py  run_features.py  run_predict.py  train.py  train_raw.py  train_rul.py  verify_data.py
src/: .gitkeep  feature_engineering.py  load_cmapss.py  load_data.py  predict.py  raw_model.py  rul_model.py  train_model.py
tests/: __init__.py  test_feature_engineering.py  test_load_cmapss.py  test_load_data.py  test_predict.py
