[project]
name = "predictive-maintenance-tensorflow"
version = "0.1.0"
description = "ML pipeline for predictive maintenance using CWRU Bearing vibration data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "commitizen>=3.0",
]

# --- Commit message convention (Conventional Commits) ---
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]

# --- Black: code formatter ---
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.eggs
  | data
  | notebooks
)/
'''

# --- Ruff: fast linter ---
[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
]
ignore = ["E501"]  # line length handled by Black

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
